--- a/index.html
+++ b/index.html
@@ -3,10 +3,114 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <title>Hello Front-End</title>
+  <title>Airbnb Mock-up</title>
 </head>
+
 <body>
-  <h1>Hello Front-End</h1>
+
+  <header>
+      <h1>Airbnb</h1>
+  </header>
+
+  <section id="firstsection">
+    <div class="firstintro">
+
+      <h2>Meet Guidebooks</h2>
+
+      <p>Discover hundreds of local spots recommended by Airbnb hosts</p>
+
+    </div>
+
+    <div class="firstphotos">
+
+      <div class="SF">
+        <div class="SF-image">
+          <img src="img/san-francisco.jpg">
+        </div>
+
+        <div class="SF-caption">
+          <span>San Francisco</span>
+        </div>
+      </div>
+
+      <div class="NY">
+        <div class="NY-image">
+          <img src="img/new-york.jpg">
+        </div>
+
+        <div class="NY-caption">
+          <span>New York</span>
+        </div>
+      </div>
+
+      <div class="LDN">
+        <div class="LDN-image">
+          <img src="img/london.jpg">
+        </div>
+
+        <div class="LDN-caption">
+          <span>London</span>
+        </div>
+      </div>
+
+    </div>
+
+      <input type="submit" name="submit" value="See All Guidebooks" class="buttonOne"/>
+
+
+  </section>
+
+  <section id="scdsection">
+
+    <div class="scdintro">
+
+      <h2>Just for the weekend</h2>
+
+      <p>Discover new, inspiring places close to home</p>
+
+    </div>
+
+    <div class="scdphotos">
+
+      <div class="NAPA">
+        <div class="NAPA-image">
+          <img src="img/napa.jpg">
+        </div>
+
+        <div class="NAPA-caption">
+          <span>Napa</span>
+        </div>
+      </div>
+
+      <div class="SNM">
+        <div class="SNM-image">
+          <img src="img/sonoma.jpg">
+        </div>
+
+        <div class="SNM-caption">
+          <span>Sonoma</span>
+        </div>
+      </div>
+
+      <div class="SFii">
+        <div class="SFii-image">
+          <img src="img/san-francisco-2.jpg">
+        </div>
+
+        <div class="SFii-caption">
+          <span>San Francisco</span>
+        </div>
+      </div>
+
+    </div>
+
+    <input type="submit" name="submit" value="See All Destinations" class="buttonTwo"/>
+
+    </div>
+
+  </section>
+
 </body>
 </html>
