--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
 
 <body>
 
-  <header>
-      <h1>Airbnb</h1>
-  </header>
-
   <section id="firstsection">
     <div class="firstintro">
 
@@ -31,7 +27,7 @@
         </div>
 
         <div class="SF-caption">
-          <span>San Francisco</span>
+          <p>San Francisco</p>
         </div>
       </div>
 
@@ -41,7 +37,7 @@
         </div>
 
         <div class="NY-caption">
-          <span>New York</span>
+          <p>New York</p>
         </div>
       </div>
 
@@ -51,13 +47,12 @@
         </div>
 
         <div class="LDN-caption">
-          <span>London</span>
+          <p>London</p>
         </div>
       </div>
 
     </div>
-
-      <input type="submit" name="submit" value="See All Guidebooks" class="buttonOne"/>
+      <button type="button" class="buttonOne">See All Guidebooks</button>
 
 
   </section>
@@ -80,7 +75,7 @@
         </div>
 
         <div class="NAPA-caption">
-          <span>Napa</span>
+          <p>Napa</p>
         </div>
       </div>
 
@@ -90,7 +85,7 @@
         </div>
 
         <div class="SNM-caption">
-          <span>Sonoma</span>
+          <p>Sonoma</p>
         </div>
       </div>
 
@@ -100,14 +95,12 @@
         </div>
 
         <div class="SFii-caption">
-          <span>San Francisco</span>
+          <p>San Francisco</p>
         </div>
       </div>
 
     </div>
-
-    <input type="submit" name="submit" value="See All Destinations" class="buttonTwo"/>
-
+      <button type="button" class="buttonTwo">See All Destinations</button>
     </div>
 
   </section>
